# diode-agent

./: README.md
diode-prometheus-agent/: README.md  config.sample.yaml  pyproject.toml  sample.env
diode-prometheus-agent/diode_prometheus/: __init__.py  client.py  discovery.py  parser.py  translate.py  version.py
diode-prometheus-agent/diode_prometheus/cli/: cli.py
